--- a/day_two/Cargo.toml
+++ b/day_two/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day_one"
+name = "day_two"
 version = "0.1.0"
 authors = ["Carl Campbell <carl-campbell-III@yandex.com>"]
 edition = "2018"
